# staStarShipSimulator

./: .dockerignore  .gitignore  ADDING_ACTIONS.md  AGENTS.md  ALPHA_INSTRUCTIONS.md  CLAUDE.md  CLUSTER_ANALYSIS.md  Dockerfile  Mechanics Extension.txt  PLAYER_VIEW_REDESIGN_PLAN.md  README.md  SKILLS_SIMPLIFICATION_REPORT.md  STASimulator.spec  STASimulator_windows.spec  baseline_test_results_new.txt  build_mac.sh  characterTalents.md  dev.sh  docker-compose.test.yml  docker-compose.yml  exampleCharacter.md  featureTracking.md  howToStartDev.md  immediate_tasks.md  launcher.py  mcp_config.yaml  migrate_calibrate_weapons.py  migrate_tactical_map.py  migrate_to_effects_system.py  opencode.json  pyproject.toml  requirements-dev.txt  requirements.txt  sta_simulator.db  starshipWeapons.md  starshiprules.md  start.sh  test_output.txt  test_results.txt
.agents/skills/excalidraw-diagrams/: .gitignore
.github/workflows/: build.yml
.opencode/: model-settings.jsonc  opencode-config-backup.json  opencode-model-manager.py
.opencode/agents/: architect.md  cloud-infra.md  code-auditor.md  code-reviewer.md  data-engineer.md  orchestrator.md  python-dev.md
.opencode/commands/: get-free-models.md  model_selector.py
.opencode/skills/async-python-patterns/: SKILL.md
.opencode/skills/code-review-excellence/: SKILL.md
.opencode/skills/cqrs-implementation/: SKILL.md
.opencode/skills/debugging-strategies/: SKILL.md
.opencode/skills/differential-review/: SKILL.md
.opencode/skills/javascript-testing-patterns/: SKILL.md
.opencode/skills/microservices-patterns/: SKILL.md
.opencode/skills/modern-javascript-patterns/: SKILL.md
.opencode/skills/nextjs-app-router-patterns/: SKILL.md
.opencode/skills/solid/: SKILL.md
docs/: PROJECT_BRIEFING.md  README.md  agent_summary.md  delivery_plan.md  howToStartDev.md  implementation_plan.md  learnings_and_decisions.md  legacy_index.md  m10_workflow.md  m8.2-open-questions.md  m9_workflow.md  milestone1_plan.md  milestone2_tasks.md  milestone3_tasks.md  open_questions.md  pages_overview.md  rules_reference.md  scene_management_notes.md  staStarShipSimulator.code-workspace
docs/archive/: PROJECT_BRIEFING.md  learnings_and_decisions.md
docs/documentation/: objects.md  project_summary.md
docs/plans/: 2026-03-13-subagent-model-response-test.md  2026-03-15-4-state-scene-lifecycle.md  2026-03-23-e2e-test-review.md  2026-03-23-user-stories.md
docs/references/: game_machanics.md  objects.md  talent_system_design.md  technical.md
docs/tasks/: milestone10_tasks.md  milestone11_tasks.md  milestone1_plan.md  milestone4_tasks.md  milestone5_tasks.md  milestone6_tasks.md  milestone7_tasks.md  milestone8_tasks.md  milestone9_tasks.md
referenceFiles/: STA2e_Core Rulebook_DIGITAL_v1.1.txt  _featureTracking.md  exampleStarship.md  focus.md  starshipTalents.md  tasks.md
scripts/: generate_character.py  generate_ship.py  migrate_tests.py  migrate_tests_v2.py  run_server.py  seed_npc_templates.py  test_combat.py
sta/: __init__.py  updater.py  version.py
sta/database/: __init__.py  async_db.py  config.py  db.py  schema.py  vtt_schema.py
sta/generators/: __init__.py  character.py  data.py  starship.py
sta/mechanics/: __init__.py  action_config.py  action_handlers.py  actions.py  combat.py  dice.py  momentum_manager.py  movement.py  threat_manager.py
sta/models/: __init__.py  character.py  combat.py  enums.py  starship.py
sta/web/: __init__.py  app.py  dependencies.py
tests/: TEST_MARKERS.md  __init__.py  conftest.py  m10_narrative_and_creation.py  test_action_logging.py  test_actions_command.py  test_actions_conn.py  test_actions_engineering.py  test_actions_science.py  test_actions_standard.py  test_actions_tactical.py  test_campaign_resources.py  test_character_claiming.py  test_character_extended.py  test_characters_api.py  test_dice_roll_interface.py  test_export_import.py  test_import_export.py  test_m10_gm_console_round_tracker.py  test_personnel_encounter.py  test_scene.py  test_scene_activation.py  test_scene_config.py  test_scene_connections.py  test_scene_encounter_derivation.py  test_scene_lifecycle.py  test_scene_m3_schema.py  test_scene_participants.py  test_scene_ships.py  test_scene_termination.py  test_session_tokens.py  test_ships_api.py  test_theme_preference.py  test_theme_ui.py  test_turn_enforcement.py  test_turn_order.py  test_universe_integration.py  test_universe_library.py  test_visibility.py  test_vtt_campaign_integration.py
tests/e2e/: test_game_actions.py  test_user_journeys.py
tests/m10_11/: test_dice_integration.py  test_dice_resolution.py
tests/m8_2/: test_momentum_manager_unit.py  test_objects.py  test_threat_manager.py  test_threat_manager_unit.py
(+129 files in other folders)
