[project]
name = "sta-starship-simulator"
version = "0.1.0"
description = "Star Trek Adventures Starship Simulator"
requires-python = ">=3.13"

dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.1",
    "flask",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "sqlalchemy",
    "uvicorn[standard]>=0.41.0",
    "werkzeug",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sta"]

[tool.uv]
managed = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]
