[project]
name = "sta-starship-simulator"
version = "0.1.0"
description = "Star Trek Adventures Starship Simulator"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "werkzeug",
    "jinja2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["sta"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"