[project]
name = "sta-starship-simulator"
version = "0.1.0"
description = "Star Trek Adventures Starship Simulator"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "werkzeug>=3.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "alembic>=1.13",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["sta"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# Test markers for running specific test groups
# Usage: pytest -m <marker> to run only tests with that marker
#        pytest -m "not <marker>" to exclude tests with that marker
markers = [
    # Scene-related markers
    "scene_lifecycle: Tests for scene state transitions (draft→ready→active→completed)",
    "scene_activation: Tests for scene activation endpoint",
    "scene_termination: Tests for scene termination/completion endpoint",
    "scene_management: Tests for scene CRUD and general scene operations",
    "scene_config: Tests for scene configuration and settings",
    "scene_connections: Tests for scene connections and transitions",
    "scene_participants: Tests for scene participant management",
    "scene_ships: Tests for scene ship management",
    
    # Combat/Turn markers
    "combat: Tests for combat encounters and battle mechanics",
    "turn_enforcement: Tests for turn order and enforcement rules",
    "turn_order: Tests for turn order management",
    
    # Action markers
    "actions: Tests for action execution and effects",
    "action_tactical: Tests for tactical/security station actions",
    "action_command: Tests for command station actions",
    "action_conn: Tests for conn station actions",
    "action_engineering: Tests for engineering station actions",
    "action_science: Tests for science station actions",
    
    # Character markers
    "characters: Tests for character management",
    "character_claiming: Tests for character claiming in multiplayer",
    
    # Ship markers
    "ships: Tests for ship management",
    
    # Campaign markers
    "campaign: Tests for campaign management",
    "campaign_resources: Tests for campaign resources (momentum, threat)",
    "personnel_encounter: Tests for personnel encounters",
    
    # API markers
    "api: Tests for REST API endpoints",
    
    # VTT integration markers
    "vtt: Tests for VTT (Virtual Table Top) integration",
    "universe: Tests for universe/library integration",
    
    # Other markers
    "session: Tests for session/token management",
    "visibility: Tests for visibility/privacy controls",
    "logging: Tests for action logging",
    
    # Performance markers
    "slow: Tests that take longer to run (can be excluded with -m 'not slow')",
]